# youtube-dubbing-app

./: .gitignore  LICENSE  README.md  main.py  pyproject.toml
src/: main.py
src/dubbing_app/: __init__.py  main.py  runner.py
src/dubbing_app/core/: __init__.py  config.py  setup.py  theme.py  transcript.py  translator.py  tts.py
