[project]
name = "youtube-dubbing-app"
version = "0.1.0"
description = "YouTube 영상을 한국어 음성으로 더빙하는 앱 (Claude Code headless 활용)"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "streamlit>=1.40.0",
]

[project.scripts]
dubbing-app = "dubbing_app.main:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/dubbing_app"]

[tool.uv]
dev-dependencies = [
    "ruff>=0.8.0",
]
