[project]
name = "youtube-dubbing-app"
version = "0.1.0"
description = "YouTube 영상을 한국어 음성으로 더빙하는 앱"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "flet[all]>=0.25.0",
    "yt-dlp>=2024.0.0",
    "edge-tts>=6.1.0",
    "openai>=1.0.0",
    "httpx>=0.27.0",
    "pillow>=12.0.0",
    "flet-audio>=0.1.0",
]

[project.scripts]
dubbing-app = "dubbing_app.main:main"

[tool.flet]
org = "com.frentis"
product = "YouTube Dubbing"

[tool.flet.app]
path = "src"

[tool.flet.macos]
build_arch = "arm64"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/dubbing_app"]

[tool.uv]
dev-dependencies = [
    "ruff>=0.8.0",
]
